--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head><meta charset="UTF-8" />
     <title>Run Buddy</title>
 </head>
-
+<h1>What we do</h1>
 </html>
 <!-- navigation -->
 <header>
