--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
   <section>
     <h2>Reach Out</h2>
   </section>
-  
+  <h1> Hello </h1>
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
   </footer>
+
