--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <p>Test line</p>
   </section>
   <h1> Hello </h1>
   <!-- footer -->
