--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head><meta charset="UTF-8" />
+  
+    <head>
+      <link rel="stylesheet" href="./assets/css/style.css" />
+      <meta charset="UTF-8" />
     <title>Run Buddy</title>
 </head>
-<h1>What we do</h1>
+
+<h1>What We Do</h1>
 </html>
 <!-- navigation -->
 <header>
@@ -12,6 +15,9 @@
       <a href="/">Run Buddy</a>  </h1>
     
 <!--Anchor element-->
+<nav>
+  <ul>
+    <li>
 <a href="#what-we-do"> What We Do</a>
 </li>
 
@@ -26,7 +32,7 @@
   <a href="#reach-out">Reach Out</a>
 </li>
       </ul>
-    </nav>
+    </nav> 
   </header>
   
   <!-- hero/jumbotron -->
@@ -53,9 +59,9 @@
     <h2>Reach Out</h2>
 
   </section>
->
   <!-- footer -->
   <footer>
-    
+    <h2> ❤️ Made with love by Run Buddy.
+      </h2>
   </footer>
 
