--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <!--Add form element-->
     <form>
       <label for="name">Enter full name:</label>
-      <input type="text"placeholder="Your Name" name="name" id="name" />
+      <input type="text"placeholder="Your Name" name="name" id="name" class="form-input" />
       
       <label for="email">Enter Email Address:</label>
-      <input type="text" placeholder= "Email Address" name="email" id="email" />
+      <input type="text" placeholder= "Email Address" name="email" id="email" class="form-input" />
 
       <label for="phone">Enter a phone number:</label>
-      <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+      <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
 
       <p>
         Have you worked out with a trainer before?
@@ -72,11 +72,41 @@
 <!-- "what we do" section -->
 <section>
   <h2>What We Do</h2>
+  <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Prak XOXO Tumblr normcore Banksy direct trad Blue Bottle chillwave you probably havent heard of them single-origin coffe Vice fanny pack fixie Odd Future Austin fingerstache pickeld twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfis Schlitz sustainable Intelligentsia umami deep v craft 
+
+  </p>
 </section>
 
 <!-- "what you do" section -->
 <section>
   <h2>What You Do</h2>
+  <div>
+    <!--insert this img element-->
+    <img src="./assets/images/step-1.svg" alt="" />
+    <h3>
+      Step:1 Fill Out the Form Above.
+    </h3>
+    <p>You're already here, so why not?</p>
+  </div>
+  <div>
+    <img src="./assets/images/step-2.svg" alt=""/>
+    <h3>
+      Step 2: Consult with One of Our Trainers.
+    </h3>
+    <p> Are you here to build muscle, lose weight, or just feel good?</p>
+  </div>
+  <div>
+    <img src="./assets/images/step-3.svg" alt=""/>
+    <h3>
+      Step 3: Get Running
+    </h3>
+    <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+  </div>
+  <div>
+    <img src="./assets/images/step-4.svg" alt=""/>
+    <h3>Step 4: See Results.</h3>
+    <p>Bi-weekly checkins with your trainer will keep you focused</p>
+  </div>
 </section>
 
 <!-- "meet the trainers" section -->
