style what we do section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
 </head>
-<body></body>
-<h1>What We Do</h1>
+<body>
 
 <!-- navigation -->
 <header>
@@ -70,8 +69,9 @@
 </section>
 
 <!-- "what we do" section -->
-<section>
+<section id="what-we-do" class="intro">
   <h2>What We Do</h2>
+ 
   <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Prak XOXO Tumblr normcore Banksy direct trad Blue Bottle chillwave you probably havent heard of them single-origin coffe Vice fanny pack fixie Odd Future Austin fingerstache pickeld twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfis Schlitz sustainable Intelligentsia umami deep v craft 
 
   </p>
